# Core

./: .gitignore  CMakeLists.hpp  CMakeLists.txt  Call.h.in  Config.cmake.in  CoreConfig.cmake.in  Doxyfile  LICENSE  LICENSE.md  README.md  test.sh
.github/workflows/: cmakebuild.yml  test-default.yml  test-gcc-clang.yml  test-gcc.yml
cmake/: Core.cmake  Core.cmake.hpp  Utility.cmake  Utility.hpp  cmake.hpp
doc/: Alloc_8c_8o_8d.html  Alloc_8h.html  Alloc_8h_source.html  Alloc_8hpp.html  Alloc_8hpp_source.html  ArrTest_8cpp.html  ArrTest_8cpp_8o_8d.html  Arr_8c.html  Arr_8c_8o_8d.html  BitVec_8h.html  BitVec_8h_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Call_8h_source.html  Cast_8h.html  LICENSE_8md.html  Linear_8c_8o_8d.html  README_8md.html  a_8c.html  dir_13a46c9c6307c77ee335dfdae1533d21.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_22c7526e5be57ac33234b9f029cecd33.html  dir_29b991757baefd4c9fee1250ebc1a608.html  dir_3339dc3fb3b6edb5c9435acb2bc8a9d8.html  dir_335cf730a98e7fee3a08ae4bbf58fa4e.html  dir_4388fd7f79358cfd51ce5572ff30fd24.html  dir_46108c1310e818e43a67494014e66d25.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_541614f1c387889054b5d0e790c79ab1.html  dir_55cc32503a866cfcfb402868d1a77c0d.html  dir_56b796340763db57e5495b6089d722d7.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6f0a7164e1ab46799158bcec3618d438.html  dir_7b0f6cce4f3abf38f43504ab17c30bba.html  dir_8ab1b295cbbcb68cdb93110d6d35ff44.html  dir_97803ed0a7b73076b10cbc5226bd9e63.html  dir_acf396ae6e342fb92ea11fb991615b6c.html  dir_cc3495883b2766f8390144301f0c421b.html  dir_cea6c8738b8582f36331fb45f2451827.html  dir_d44c64559bbebec7f509842c48db8b23.html  (+33 more)
doc/search/: all_13.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  defines_1.js  defines_b.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_4.js  files_5.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js  variables_3.js  variables_6.js  variables_8.js
docs/: Alloc_2Defs_8hpp.html  Alloc_2Defs_8hpp.js  Alloc_2Defs_8hpp_source.html  Alloc_2Err_8h.html  Alloc_2Err_8h.js  Alloc_2Err_8h_source.html  Alloc_2Own_8hpp.html  Alloc_2Own_8hpp.js  Alloc_2Own_8hpp_source.html  Alloc_2Ref_8hpp.html  Alloc_2Ref_8hpp.js  Alloc_2Ref_8hpp_source.html  Alloc_8c.html  Alloc_8h.html  Alloc_8h.js  Alloc_8h_source.html  Alloc_8hpp.html  Alloc_8hpp.js  Alloc_8hpp_source.html  Arr_2Defs_8hpp.html  Arr_2Defs_8hpp.js  Arr_2Defs_8hpp_source.html  Arr_2Err_8h.html  Arr_2Err_8h_source.html  Arr_2Own_8hpp.html  Arr_2Own_8hpp.js  Arr_2Own_8hpp_source.html  Arr_2Ref_8hpp.html  Arr_2Ref_8hpp.js  Arr_2Ref_8hpp_source.html  Arr_8h.html  Arr_8h.js  Arr_8h_source.html  Arr_8hpp.html  Arr_8hpp.js  Arr_8hpp_source.html  BitVec_8h.html  BitVec_8h.js  BitVec_8h_source.html  BitVec_8hpp.html  (+158 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+32 more)
dummy/: enum.h
hin/: Call.h.in  Float.h.in  LangVer.h.in
hin/Pack/: Beg.h.in  End.h.in  Num.h.in
hin/ae2f/Macro/: Call.h.in
inc/: ae2f.hpp
inc/ae2f/: BitVec.h  BitVec.hpp  Call.h  Call.h.in  Cast.h  Cmp.h  Cmp.hpp  Cxx.h  Float.h  Float.h.in  Guide.h  Keys.h  LangVer.h  LangVer.h.in  Platform.h  cc.h  errGlob.h  errGlob.hpp  stdint.h
inc/ae2f/Cast/: CasterUnion.hpp  Constexpr.hpp
inc/ae2f/Cmp/: Fun.h  Fun.hpp
inc/ae2f/Cxx/: Constexpr.h  Nil.h  Reg.h
inc/ae2f/Pack/: Beg.h  Num.h  Num.h.in
inc/ae2f/c90/: Limits.h  StdBool.h  StdInt.h  have-stdint.h.in  limits.width.h.in  ptrsz.h.in
inc/ae2f/cc/: gnuc.h
include/: ae2f.hpp
include/ae2f/: Atom.h  BInt.h  BitVec.h  BitVec.hpp  Call.h  Cast.h  Cmp.h  Cmp.hpp  Cxx.h  Float.h  Lock.h  Platform.h  RNum.h  WaitWake.h  errGlob.h  errGlob.hpp
include/ae2f/Cast/: CasterUnion.hpp  Constexpr.hpp
include/ae2f/Cmp/: Fun.h  Fun.hpp
include/ae2f/DataStructure/: Allocator.h  Allocator.hpp  Array.h  Array.hpp
include/ae2f/Ds/: Alloc.h  Alloc.hpp  Arr.h  Arr.hpp
include/ae2f/Ds/Alloc/: Err.h  Own.h  Own.hpp  Ref.h  Ref.hpp
include/ae2f/Ds/Arr/: Defs.hpp  Err.h  Own.hpp  Ref.hpp
include/ae2f/Macro/: BitVec.h  BitVec.hpp  BitVector.h  Call.h  Cast.h  Cmp.h  Cmp.hpp  Compare.h  Compare.hpp  errGlob.h  errGlob.hpp  errGlobal.h  errGlobal.hpp
include/ae2f/Macro/Cast/: CasterUnion.hpp
include/ae2f/Pack/: Beg.h  End.h  Num.h
src/DataStructure/: Allocator.c  Array.c  cAllocator.c  cArray.c
src/DataStructure/Allocator/: Linear.c
src/Ds/: Alloc.c  Arr.c
src/Ds/Alloc/: Linear.c
src/Macro/: errGlob.c  xerrGlobal.cpp
test/: BitVec.cc  CMakeLists.txt  NIL-c++.cc  WaitWake.c  WaitWake.cc  a.cpp  builtins.c  c90.c  cxx.cc  eval.cc  float.c  int.cpp  main.c  main.cc  test.h
test/test0/: AllocTest.cpp  ArrTest.cpp  CMakeLists.txt  main.cpp
test/test01/: main.c
test/test1/: ArrTest.c  CMakeLists.txt  main.c
test/test_0/: CMakeLists.txt  main.c
test/test_allocator/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_allocator
test/xtest_0/: CMakeLists.txt  xmain.cpp
